--- a/Telco Customer Churn/Telco_Churn_Prediction.ipynb
+++ b/Telco Customer Churn/Telco_Churn_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrHAk5a9+N4kdYjkLT9Mva",
+      "authorship_tag": "ABX9TyP46obZB1zMPlkF5djxa6qb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Uo14awm6J6GB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uo14awm6J6GB",
+        "outputId": "8a70c221-8d40-4579-94b3-2d7d4470c7f0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test colab to github\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('test colab to github')"
+      ]
     }
   ]
 }
